--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #00d2ff;
-$secondary-color: #00cdac;
+$primary-color: #00cd2c;
+$secondary-color: #008c6e;
 
 $white-color: #fff;
 
